
	* reroot/libreroot/alloc.h: Moved to reroot/alloc.h.
	* reroot/libreroot/alloc.cc (do_realloc): Made sure `std::realloc' is
	  called, not a recursive call to `reroot::realloc'.

	* reroot/rerootd/alloc.cc: Copied from libreroot/alloc.cc, throws
	  `std::bad_alloc' exception instead of calling `error' if allocation
	  fails.

	* reroot/message.h: Fixed including of libreroot/rerootd specific
	  headers.  Removed non-inline functions.
	* reroot/shared_implementation.cc: Added non-inline functions from
	  message.h.

2005-07-12 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/alloc.cc, reroot/libreroot/alloc.h: Added.
	* reroot/libreroot/libc.cc, reroot/libreroot/libc.h: Moved memory
	  allocation functions to alloc.cc & alloc.h.

	* reroot/shared_implementation.cc: Added.
	* reroot/libreroot/shared.cc: Added.  Includes shared_implementation.cc.
	* reroot/xmessage.h: `xmessage' c'tor moved to shared_implementation.cc.
	* reroot/packet.h: Message metadata comparison operators moved to
	  shared_implementation.cc.

	* reroot/rerootd/messagequeue.cc: Commented out `send' & `receive'
	  functions.

	* reroot/message.h: Added, currently unused.

	* reroot/TODO: Removed for stating the obvious & being in the way.

2005-07-11 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/libc.cc: Tidied error messages.

	* reroot/message.h: Renamed to packet.h.
	* reroot/packet.h: Renamed `reroot::message' to `reroot::message_data'.
	* reroot/libreroot/messagequeue.cc: Changed references to `message' into
	  references to `message_data'.

	* reroot/rerootd/messagequeue.cc, reroot/rerootd/messagequeue.h:
	  Rewritten based on their libreroot counterparts.

	* reroot/rerootd/rerootd.cc, reroot/rerootd/rerootd.h: Made aware of
	  namespace `reroot'.  Use `canonize_file_name' instead of specially
	  written function.  Improved error reporting.  rerootd actually
	  compiles again.

2005-07-10 Gareth Jones <gareth_jones@users.berlios.de>
